crates/ars-collections/tests/ui/tab_key_bad_variant_shape.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum BadTab {
    #[tab_key(int)]
    Profile,
}

fn main() {}
